2005-07-25  Sebastien Bacher <seb128@debian.org>

	* gnome-background-properties.glade: Replace GnomeColorPicker with
	the GtkColorButton widget
	Some properties were added by newer version of glade

	* gnome-wp-capplet.c (gnome_wp_props_wp_set):
	(gnome_wp_[s]color_changed, gnome_wp_color[12]_changed):
	(gnome_wp_load_stuffs, wallpaper_properties_init):
	Update to use the API for GtkColorButton instead of GnomeColorPicker

	Fixes #171676

2005-07-14  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-xml.c (gnome_wp_xml_load_xml): If xmlParseFile returns
	NULL, then just return, rather than trying to parse the document

	Fixes #310041

2005-07-13  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-info.c (gnome_wp_info_new): Pass the md5sum to the call
	to g_strconcat to create the path to the thumbnail file

	Fixes #310293

2005-07-10  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.[ch]:
	(gnome_wp_icon_theme_changed):
	(wallpaper_properties_init):
	Update to use GtkIconTheme rather than GnomeIconTheme
	Based on patch from Jan de Groot

	Fixes #171677

2005-07-10  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-info.c (gnome_wp_info_new): Fix some memory leaks by using
	a separate variable to store the escaped path, and md5sum

	* gnome-wp-item.c (gnome_wp_item_get_thumbnail): Fix a couple of
	memory leaks by using a separate variable to store the escaped path
	Don't unref the pixbuf from the thumbnail generation, and then try
	to load it again after saving

2005-06-14  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-info.c (gnome_wp_info_new): Revert undocumented, unapproved
	change from Sebastian Bacher committed on 2005-05-22
	
2005-02-26  Rodney Dawes  <dobey@novell.com>

	* *.[ch]: Update Copyright to include current year

2005-02-26  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (gnome_wp_add_image): If the filename is not
	encoded in UTF-8, we just ignore it for now to avoid crashing
