@@ -1,5 +1,14 @@
 2005-07-25  Sebastien Bacher <seb128@debian.org>
 
+	* gnome-wp-capplet.c (gnome_wp_{scale,shade}_type_changed):
+	Update for the changed signal of the option menus
+	(wallpaper_properties_init): Connect to the changed signal of
+	the scale and color style option menus
+
+	Fixes #157396
+
+2005-07-25  Sebastien Bacher <seb128@debian.org>
+
 	* gnome-background-properties.glade: Replace GnomeColorPicker with
 	the GtkColorButton widget
 	Some properties were added by newer version of glade
